Fix: Names can exceed its frame (#1104)
* Names can exceed its frame

* Change the name too long

--- a/src/AzureIoTHub.Portal/Client/wwwroot/css/app.css
+++ b/src/AzureIoTHub.Portal/Client/wwwroot/css/app.css
@@ -28,3 +28,16 @@
 #loading-bar .peg {
     height: 4px !important;
 }
+#MudCardHeader {
+    white-space: nowrap;
+    overflow: scroll;
+}
+.DeviceCardHeader .mud-card-header-content {
+    display: inline-grid;
+}
+.overflow-ellipsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: block;
+}
+
